# api/openapi/users_service.yaml
@@ -70,6 +70,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GenericResponse'
+  /users/{id}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+    get:
+      tags:
+        - users
+      summary: Get one user
+      description: Get one user by its id
+      operationId: getOneUser
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericResponse'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericResponse'
   /users:
     get:
       tags:
@@ -132,4 +165,5 @@ components:
       properties:
         message:
           type: string
-
+        status:
+          type: integer
